--- a/style/style.css
+++ b/style/style.css
@@ -75,6 +75,10 @@ div.header-search > input {
 div.header-search > input:focus {
     outline: none;
 }
+input::placeholder {
+    color: #1e425a; /* Change placeholder text color */
+    opacity: 0.6; /* Optional: Adjust opacity */
+}
 div.header-search > button {
 	padding: 10px 25px;
 
@@ -141,6 +145,46 @@ h1.section-header {
 	font-weight: 700;
 	margin: 50px 0px;
 }
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 200px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+.dropdown-content a:hover {
+	background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+}
+
+.dropdown .dropdown-button {
+	background-color: white;
+	color: black;
+	padding: 16px;
+	font-size: 16px;
+	border: 1px solid #ccc;
+	cursor: pointer;
+	width: 100%;
+	text-align: left;
+}
+
 div.card-container {
 	display: flex;
 	justify-content: start;
@@ -149,6 +193,7 @@ div.card-container {
 	gap: 20px;
 	row-gap: 35px;
 }
+
 .product-card {
 	display: flex;
 	flex-direction: column;
@@ -246,6 +291,7 @@ button.main-buttons:hover {
 	background-color: #132d3e !important;
 }
 
+
 footer {
 	padding: 30px;
 	color: #fdf4da;
@@ -259,194 +305,16 @@ p.footer-text {
 
 
 
-
-
-
-.dropdown {
-	position: relative;
-	display: inline-block;
-}
-
-.dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 200px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-}
-
-.dropdown-content a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-}
-
-.dropdown-content a:hover {
-	background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdown-content {
-	display: block;
-}
-
-.dropdown .dropdown-button {
-	background-color: white;
-	color: black;
-	padding: 16px;
-	font-size: 16px;
-	border: 1px solid #ccc;
-	cursor: pointer;
-	width: 100%;
-	text-align: left;
-}
-
-
-
-
-.page-main-header {
-	padding-bottom: 55px;
-}
-
-.page-header {
-	font-size: 50px;
-	font-weight: 700;
-	color: #000000;
-
-	margin: 70px 0;
-}
-.nav-bar-list {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 15px;
-	list-style: none;
-}
-.nav-bar-list-item-link {
-	font-size: 25px;
-	font-weight: 500;
-	text-decoration: none;
-	color: inherit;
-
-	transition: 0.5s ease;
-}
-.active {
-	color: tomato;
-}
-
-.align-text-left {
-    text-align: left !important;
-}
-
-.nav-bar-list-item-link:hover {
-	color: #e13a10;
-}
-
-.section-styles {
-	margin-top: 10px;
-}
-.section-content-wrapper {
-	margin: 30px 0;
-
-}
-.section-header {
-	font-size: 35px;
-	font-weight: 600;
-	color: #000000;
-}
-.form-header {
-	font-size: 40px;
-	text-align: center;
-}
-
-.section-img {
-	width: 70vw;
-	height: auto;
-	border-radius: 35px;
-}
-.section-list {
-	display: flex;
-	flex-direction: column;
-	gap: 4px;
-}
-.section-paragraph {
-	font-size: inherit;
-	font-weight: inherit;
-	color: inherit;
-}
-
-.section-table {
-	width: 50vw;
-	border-collapse: collapse;
-}
-th, td {
-    text-align: center;
-	border: 1px solid #000000;
-	padding: 10px;
-}
-
-.page-footer {
-	margin-top: auto;
-	padding-top: 50px;
-	padding-bottom: 50px;
-	background-color: #000000;
-	color: #ffffff;
-}
-.footer-paragraph-link {
-	font-size: 25px;
-	font-weight: 400;
-	color: inherit;
-	text-decoration: none;
-	
-	transition: 0.5s ease;
-}
-.footer-paragraph-link:hover {
-	color: #dda89f;
-	text-decoration: none;
-}
-
-.hide-element {
-	display: none !important;
-}
-
-
 @media all and (max-width: 800px) {
-	.nav-bar-list {
-		justify-content: space-between;
-	}
-	.section-img {
-		width: 500px;
-	}
+	
 }
 
 
 @media all and (max-width: 600px) {
-	.nav-bar-list {
-		flex-direction: column;
-		align-items: center;
-	}
-	.nav-bar-list a {
-		font-size: 29px;
-	}
-
-	h1.page-header, h2.section-header {
-		text-align: center;
-	}
-	.section-img {
-		width: 100%;
-	}
-	.section-table {
-		font-size: 16px;
-	}
-
-	.footer-paragraph {
-		text-align: center;
-	}
+	
 }
 
 
 @media all and (max-width: 400px) {
-	.section-table {
-		font-size: 14px;
-	}
+	
 }
