Reset form and banner customization

--- a/style/style.css
+++ b/style/style.css
@@ -165,6 +165,16 @@ div.header-search > button {
 	gap: 20px;
 	max-height: 200px;
 }
+.error-alert {
+	background-color: rgb(228, 152, 156);
+	color: #5a1e3c;
+	font-weight: 500;
+}
+.success-alert {
+	background-color: rgb(128, 216, 137);
+	color: #1e5a1e;
+	font-weight: 450;
+}
 
 .alert-message {
 	width: 100%;
