Implement loading orders and features delete and show order

--- a/style/catalog.css
+++ b/style/catalog.css
@@ -95,7 +95,7 @@ div.catalog-header {
 	border-radius: 15px;
 
 	filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.09));
-	transition: transform 0.6s ease, filter 1s ease;
+	transition: transform 0.6s ease, filter 1s ease, 0.3 ease;
 }
 #fetch-more-button:hover {
 	position: relative;
